syntax = "proto3";
package isuxportal.proto.services.dcim;
option go_package = "github.com/isucon/isucon10-portal/proto.go/isuxportal/services/dcim";

import "isuxportal/resources/contestant_instance.proto";

service InstanceManagement {
  rpc InformInstanceStateUpdate(InformInstanceStateUpdateRequest)
      returns (InformInstanceStateUpdateResponse);
}

message InformInstanceStateUpdateRequest {
  string token = 1;
  isuxportal.proto.resources.ContestantInstance instance = 2;
}

message InformInstanceStateUpdateResponse {}
