syntax = "proto3";
package isucon10_portal.proto.services.dcim;
option go_package = "github.com/isucon/isucon10-portal/proto/services/dcim";

import "resources/contestant_instance.proto";

service InstanceManagementService {
  rpc InformInstanceStateUpdate(InformInstanceStateUpdateRequest) returns (InformInstanceStateUpdateResponse);
}

message InformInstanceStateUpdateRequest {
  string token = 1;
  ContestantInstance instance = 2;
}

message InformInstanceStateUpdateResponse [

